--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/824226789e.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
